--- a/portfolio.html
+++ b/portfolio.html
@@ -2,36 +2,41 @@
 <html>
     <title>Portfolio</title>
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
+        <body>
         <header>
-            <h2>Josh Roberts</h2>
-                <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
+            <h2 class="name">Josh Roberts</h2>
+                <div class= "links">
+                    <a class="bout" href="index.html">About</a>
+                    <a class="folio" href="portfolio.html">Portfolio</a>
+                    <a class="tact" href="contact.html">Contact</a>
+                </div>
         </header>
-    <body>
-        <div>
-            <h2>Portfolio</h2>
+    
+        <div class="about">
+            <h2 class="titulo">Portfolio</h2>
             <!-- pictures, projects, assignments... pretty much anything to show off to people goes here -->
-                <p>Cat Mouse Archery</p>
-                <p>Band Fan Page</p>
+                <img src="assets/images/archery.png" alt="archery" height= "200px" width= "250px"></img>
+                    <h3 class="works">Cat Mouse Archery</h3>
+                <img src="assets/images/band.png" alt="band" height= "200px" width= "250px"></img>
+                    <h3 class="works">Band Fan Page</h3>
         </div>
-        <div class="sidebar">
-            <h3>Connect With Me</h3>
-                <a href="https://github.com/josro14" target="_blank">
-                    <img src="assets/images/github_square.png" alt="github" height="134" width="134">
-                </a>
-                <a href="https://www.linkedin.com/in/joshua-roberts-906627153/" target="_blank">
-                    <img src="assets/images/linkedin_square.png" alt="linkedin" height="134" width="134">
-                </a>
-                <a href="https://stackoverflow.com/users/9165798/josh-roberts?tab=profile" target="_blank">
-                    <img src="assets/images/stackoverflow_square.png" alt="stackoverflow" height="122" width="122">
-                </a>
-        </div>
-    </body>
+    
+            <div class="sidebar">
+                <h3>Connect With Me</h3>
+                    <a href="https://github.com/josro14" target="_blank">
+                        <img src="assets/images/github_square.png" alt="github" height="70" width="70">
+                    </a>
+                    <a href="https://www.linkedin.com/in/joshua-roberts-906627153/" target="_blank">
+                        <img src="assets/images/linkedin_square.png" alt="linkedin" height="70" width="70">
+                    </a>
+                    <a href="https://stackoverflow.com/users/9165798/josh-roberts?tab=profile" target="_blank">
+                        <img src="assets/images/stackoverflow_square.png" alt="stackoverflow" height="70" width="70">
+                    </a>
+            </div>
+        </body>
     <footer>
         <p>© Copywrite 2018 Josh Roberts</p>
     </footer>
